src/styles/main.css
@font-face {
  font-display: swap;
  font-family: "Figtree";
  font-style: normal;
  font-weight: 400;
  src: url("fonts/figtree-v9-latin-regular.woff2") format("woff2");
}

@font-face {
  font-display: swap;
  font-family: "Figtree";
  font-style: normal;
  font-weight: 700;
  src: url("fonts/figtree-v9-latin-700.woff2") format("woff2");
}

:root {
  /* Colors - Primary */
  --clr-primary-300: hsl(214, 65%, 54%);
  --clr-primary-400: hsl(214, 52%, 25%);
  --clr-primary-900: hsl(223, 68%, 6%);

  /* Colors - Accent */
  --clr-accent-1: hsl(25, 95%, 53%);
  --clr-error: hsl(4, 95%, 72%);
  --clr-success: hsl(142, 70%, 60%);

  /* Colors - Neutral */
  --clr-neutral-100: hsl(60, 9%, 98%);
  --clr-neutral-600: hsl(217, 19%, 27%);

  /* Colors - Neutral */
  --clr-gradient: radial-gradient(
    farthest-side circle at bottom in hsl,
    hsl(214 65 65) 0%,
    hsl(214 52 25) 50%,
    hsl(223 68 6) 100%
  );

  /* Font Families */
  --ff-base: "Figtree", system-ui, sans-serif;

  /* Font Sizes */
  /* Step -1: 12.8px → 13.5034px */
  --fs-step--1: clamp(0.8rem, 0.7853rem + 0.0651vw, 0.844rem);
  /* Step 0: 16px → 18px */
  --fs-step-0: clamp(1rem, 0.9583rem + 0.1852vw, 1.125rem);
  /* Step 1: 20px → 23.994px */
  --fs-step-1: clamp(1.25rem, 1.1668rem + 0.3698vw, 1.4996rem);
  /* Step 2: 25px → 31.984px */
  --fs-step-2: clamp(1.5625rem, 1.417rem + 0.6467vw, 1.999rem);
  /* Step 3: 31.25px → 42.6347px */
  --fs-step-3: clamp(1.9531rem, 1.7159rem + 1.0541vw, 2.6647rem);
  /* Step 4: 39.0625px → 56.832px */
  --fs-step-4: clamp(2.4414rem, 2.0712rem + 1.6453vw, 3.552rem);
  /* Step 5: 48.8281px → 75.7571px */
  --fs-step-5: clamp(3.0518rem, 2.4907rem + 2.4934vw, 4.7348rem);

  /* @link https://utopia.fyi/type/calculator?c=360,16,1.25,1440,18,1.333,5,1,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */

  /* Font Weights */
  --fw-regular: 400;
  --fw-bold: 700;
}

/* ******** RESET ******** */
*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
  /* stops mobile browsers from try to adjust text sizes for mobile */
  text-size-adjust: none;
  -webkit-text-size-adjust: none;

  /* stop macOS from rendering fonts thicker */
  -webkit-font-smoothing: antialiased;
}

@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  min-block-size: 100vh;
  line-height: 1.5;
}

h1,
h2,
h3,
h4,
input,
label,
button {
  line-height: 1.1;
}

body,
h1,
h2,
h3,
p,
dl,
dd,
figure,
blockquote {
  margin: 0;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

p {
  text-wrap: pretty;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
}

ul[role="list"],
ol[role="list"] {
  list-style: none;
  padding: 0;
}

input,
button,
textarea,
select {
  font: inherit;
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-inline-size: 100%;
  block-size: auto;
}

/* ******** GENERAL STYLES ******** */
body {
  font-family: var(--ff-base);
  font-size: var(--fs-step-0);
  font-weight: var(--fw-regular);
  background-color: var(--clr-neutral-100);
  color: var(--clr-primary-900);
}

section,
footer {
  padding-block: clamp(4rem, 3.125rem + 2.134vw, 7.5rem);
}

a {
  color: inherit;
  text-decoration: none;
}

/* ******** COMPOSITION / LAYOUT ******** */
.wrapper {
  max-inline-size: 70em;
  margin-inline: auto;
  padding-inline: 2rem;
}

.flow > * + * {
  margin-block-start: var(--flow-space, 1rem);
}

.flex-flow {
  display: flex;
  gap: var(--gap, 1rem);
}

.flex-wrap {
  flex-wrap: wrap;
}

.grid-flow {
  --column-count: 1;
  --column-size: 1fr;
  --column-template: repeat(var(--column-count, 1), var(--column-size, 1fr));

  display: grid;
  gap: var(--gap, 1rem);
  grid-template-columns: var(--column-template);
}

.grid-auto {
  --min-col-size: 200px;
  --item-placement: auto-fit;
  display: grid;
  gap: var(--gap, 1rem);
  grid-template-columns: repeat(var(--item-placement), minmax(min(var(--min-col-size), 100%), 1fr));
}

.gap-md {
  --gap: 1.5rem;
}

.gap-lg {
  --gap: 3rem;
}

.align-center {
  align-items: center;
}

.justify-center {
  justify-content: center;
}

.justify-between {
  justify-content: space-between;
}

.place-center {
  align-items: center;
  justify-content: center;
}

/* ******** UTILITIES ******** */
.visually-hidden:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  overflow: hidden;
  clip: rect(0 0 0 0); /* Legacy property for Internet Explorer */
  clip-path: inset(50%);
  white-space: nowrap;
}

.hidden {
  display: none !important;
}

.bg-dark {
  background: var(--clr-primary-900);
  color: var(--clr-neutral-100);
}

.bg-gradient {
  background-image: var(--clr-gradient);
}

.fs-step--1 {
  font-size: var(--fs-step--1);
}

.fs-step-1 {
  font-size: var(--fs-step-1);
}

.fs-step-2 {
  font-size: var(--fs-step-2);
}

.fs-step-3 {
  font-size: var(--fs-step-3);
}

.fs-step-4 {
  font-size: var(--fs-step-4);
}

.fs-step-5 {
  font-size: var(--fs-step-5);
}

.fw-bold {
  font-weight: var(--fw-bold);
}

.text-center {
  text-align: center;
}

.text-clr-light {
  color: var(--clr-neutral-100);
}

.padding-block-2xl {
  padding-block: clamp(10rem, -13.099rem + 48.263vw, 25rem);
}

.full-height {
  height: 100vh;
}

/* ******** COMPONENTS ******** */
.icon-lg {
  max-width: 4rem; /* 70px */
}

.divider-sm,
.divider-lg {
  display: block;
  width: 70px;
  height: 3px;
  background: var(--clr-primary-300);
  border-radius: 100vw;
}

.divider-lg {
  width: 150px;
  margin-block: 3rem;
}

.tags {
  display: flex;
  gap: 0.5rem;
  flex-wrap: wrap;
  align-items: center;
}

.tag {
  color: var(--clr-neutral-100);
  background: var(--clr-neutral-600);
  font-weight: var(--fw-bold);
  border-radius: 0.25rem;
  padding-inline: 1em;
  padding-block: 0.25em;
}

/* ******** BLOCK STYLE ******** */
.hero {
  position: relative;
  overflow: hidden;
  isolation: isolate;
  z-index: -1;
}

.hero__bg {
  position: absolute;
  z-index: -1;
  inset: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  opacity: 0.5;
}

.about .profile {
  @media (width > 48em) {
    --column-template: 1fr 1fr;
  }
}

.profile-pic {
  justify-self: center;
  filter: drop-shadow(0 0 4px hsl(0 0% 0% / 0.5));
  z-index: -1;

  @media (width > 48em) {
    order: 1;
    justify-self: end;
  }
}

.contact .divider-sm {
  margin-inline: auto;
}

.contact p {
  max-width: 24ch;
  margin-inline: auto;
  margin-block: 2rem;
}

.project,
.community-projects {
  --flow-space: 1.5rem;
  margin-block-start: 3rem;
}

.title-container {
  margin-block-start: 3rem;
  gap: 1.5rem;

  @media (width > 55em) {
    gap: 3rem;
  }
}

.community__projects {
  --flow-space: 3rem;
  --gap: 3rem;
  z-index: -1;
}

.community__projects:has(.project-card:hover, .project-card:focus-visible)
  .project-card:not(:hover, :focus-within) {
  filter: grayscale(1);
  z-index: -1;
}

/* ******** EXCEPTIONS ******** */

